날짜 선택 수정

--- a/styles/css/Nav.css
+++ b/styles/css/Nav.css
@@ -6,14 +6,13 @@
     font-size: 27px;
 }
 
-
 .calbtn {
-    background-color: white;
-    color: #331904;
-    font-size: 23px;
-    padding: 0;
-    margin: 0;
-    border: 1px solid white;
+    background-color: white !important;
+    color: #331904 !important;
+    font-size: 23px !important;
+    padding: 0 !important;
+    margin: -1% 0 0 0 !important;
+    border: 1px solid white !important;
 }
 .calbtn:hover {
     background-color: white;
@@ -27,6 +26,10 @@
 }
 .cal {
     display: flex;
+    justify-content: space-evenly;
+}
+.modal {
+    --bs-modal-width: 550px !important;
 }
 
 button.btn:nth-child(2) {
@@ -40,4 +43,42 @@ div.react-datepicker-wrapper:nth-child(1) > div:nth-child(1) {
 
 div.react-datepicker-wrapper:nth-child(2) > div:nth-child(1) {
     text-align: center;
+}
+div.react-datepicker-wrapper:nth-child(3) {
+    text-align: center;
+}
+
+div.react-datepicker-wrapper:nth-child(1) > div:nth-child(1) > input:nth-child(2) {
+    border: 1px solid #331904;
+}
+div.react-datepicker-wrapper:nth-child(2) > div:nth-child(1) > input:nth-child(2) {
+    border: 1px solid #331904;
+}
+div.react-datepicker-wrapper:nth-child(3) > div:nth-child(1) > input:nth-child(2) {
+    border: 1px solid #331904;
+}
+
+.react-datepicker__header { background-color: #984C0C !important; }
+.react-datepicker__current-month { color: white !important; }
+.react-datepicker__day-name { color: white !important; }
+
+.react-datepicker__navigation { margin-top: 1% }
+/*.react-datepicker__navigation-icon { color: #331904 }*/
+
+.react-datepicker__day--selected { background-color: #984C0C !important; }
+.react-datepicker__day--selected:hover { background-color: #984C0C !important; }
+.react-datepicker__day--in-selecting-range { background-color: #984C0C !important; }
+.react-datepicker__day--in-selecting-range:hover { background-color: #984C0C !important; }
+.react-datepicker__day--in-range { background-color: #984C0C !important; }
+.react-datepicker__day--in-range:hover { background-color: #984C0C !important; }
+
+.react-datepicker__day--keyboard-selected:hover { background-color: #984C0C !important; }
+.react-datepicker__day--keyboard-selected { background-color: #984C0C !important; }
+
+.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range) {
+    background-color: #984C0C !important; opacity: 0.7;
+}
+
+.react-datepicker__header:not(.react-datepicker__header--has-time-select) {
+    border-radius: 0 !important;
 }
