intro 수정, nav 고정

--- a/styles/css/intro.css
+++ b/styles/css/intro.css
@@ -21,3 +21,13 @@
 .tpl:last-child {
     margin-bottom: 3%;
 }
+
+.editorpick {
+    background: #fff3cd;
+    padding-bottom: 60px;
+
+    padding-bottom: 5%;
+}
+.mb {
+    padding-bottom: 400px;
+}
