Nav 지역 & 일정 선택, console로 선택한 값 확인하기
TODO
[] 선택한 값으로 api 불러오기

--- a/styles/css/Nav.css
+++ b/styles/css/Nav.css
@@ -19,17 +19,17 @@
     color: #331904 !important;
     font-weight: bold;
     /*margin: -1% 0 0 0 !important;*/
-    border-bottom: 1px solid white !important;
+    border-bottom: 1px solid #331904 !important;
 }
 .dropbtn:hover {
     background-color: white;
     color: #331904;
-    border: 1px solid white;
+    border: 1px solid #331904;
 }
 .dropbtn:active {
     background-color: white;
     color: #331904;
-    border: 1px solid white;
+    border: 1px solid #331904;
 }
 
 .calbtn:hover {
